# geo-document-intelligence

./: .gitignore  README.md
application/ai/: .dockerignore  .importlinter  Dockerfile  README.md  api-template.service.yml  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
application/ai/entrypoints/api/: main.py
application/ai/entrypoints/api/routers/: document.py  raw_document.py
application/ai/geo_document_intelligence/ai/document/adapters/api/: _dependencies.py  object_boundary.py
application/ai/geo_document_intelligence/ai/document/adapters/raw_document_storage/: gcs.py
application/ai/geo_document_intelligence/ai/document/adapters/segmentation_ml/: sam.py
application/ai/geo_document_intelligence/ai/document/core/: model.py
application/ai/geo_document_intelligence/ai/document/core/ports/: object_boundary_use_case.py  raw_document_storage.py  segmentation_ml.py
application/ai/geo_document_intelligence/ai/document/core/use_cases/: segmented_object_boundary.py
application/ai/geo_document_intelligence/ai/raw_document/core/: model.py
application/ai/geo_document_intelligence/ai/raw_document/core/services/: segmented_object_boundary_detector.py
application/ai/tests/: conftest.py
application/ai/tests/entrypoints/api/routers/: test_document.py  test_raw_document.py
application/ai/tests/geo_document_intelligence/ai/document/: make.py
application/ai/tests/geo_document_intelligence/ai/document/adapters/: conftest.py
application/ai/tests/geo_document_intelligence/ai/raw_document/: make.py
(+140 files in other folders)
